<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="#04448C"
    android:orientation="vertical">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegisterActivity"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/las"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/assigned_leads"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:fontFamily="@font/latobold"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <CheckBox
            android:id="@+id/openCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/open"
            android:layout_weight="0.25"
            android:textColor="@color/open_green"
            />

        <CheckBox
            android:id="@+id/validateCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validated"
            android:layout_weight="0.25"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/orange"
            />

        <CheckBox
            android:id="@+id/closedCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/closed"
            android:textColor="@color/yellow"
            />

        <CheckBox
            android:id="@+id/rejectedCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/rejected"
            android:textColor="@color/rejected_red"
            />

    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewAssignedLeads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/recycler_view_model"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:padding="5dp">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</ScrollView>