<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="#04448C"
    android:orientation="vertical">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegisterActivity"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:src="@drawable/danaherlogo" />

        <TextView
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_aboard"
            android:layout_marginTop="30dp"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:fontFamily="@font/latobold"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterprise_email"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            android:layout_marginTop="25dp"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            android:layout_marginTop="25dp"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwd"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/showPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="textStart"
            android:padding="2dp"
            android:textColor="@color/white"
            android:text="@string/show_password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:fontFamily="@font/latobold"
            android:background="@color/light_blue"/>

        <ProgressBar
            android:layout_gravity="center_horizontal"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/progress"
            />


        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/latolight"
            android:text="@string/forgot_password" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:textColor="@color/light_blue"
                android:fontFamily="@font/latolight"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:layout_marginStart="5dp"
                android:id="@+id/newRegister"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/latobold"
                android:text="@string/register_here" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>