<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="#04448C"
    android:orientation="vertical">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegisterActivity"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:src="@drawable/danaherlogo" />

        <TextView
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lead_submission_form"
            android:layout_marginTop="30dp"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:fontFamily="@font/latobold"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_name"

            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"

            android:layout_marginTop="25dp"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customer_name"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/opportunity_details"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"

            app:hintTextColor="@color/white"
            android:layout_marginTop="25dp"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/opportunity"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:lines="12"
                android:layout_width="match_parent"
                android:gravity="start|top"
                android:layout_height="match_parent"
                android:inputType="textMultiLine|textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/segment_details"

            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"

            android:layout_marginTop="25dp"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/segment_details"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value_of_lead_in"

            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"

            android:layout_marginTop="25dp"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/value"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textCursorDrawable="@null"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lead_submitted_to"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            android:layout_marginTop="25dp"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailOfReceiver"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:textCursorDrawable="@null"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>





        <LinearLayout
            android:layout_marginTop="10dp"
            android:padding="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:textColor="@color/light_blue"
                android:fontFamily="@font/latolight"
                android:text="@string/lead_submitted_by" />

            <TextView
                android:layout_marginStart="5dp"
                android:id="@+id/emailOfSender"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/latobold"/>
        </LinearLayout>



        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="textStart"
            android:padding="2dp"
            android:textColor="@color/white"
            android:text="@string/all_the_details_mentioned_above_about_the_lead_is_to_the_best_of_my_knowledge"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:fontFamily="@font/latobold"
            android:background="@color/light_blue"/>

        <ProgressBar
            android:layout_gravity="center_horizontal"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/progress"
            />
    </LinearLayout>

</ScrollView>


